# sytem-design-with-vibe-coding

./: README.md
ai_virtual_assitant_platform/: .dockerignore  .env.docker.full  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.celery  Makefile  README.md  TODO.md  alembic.ini  coverage.xml  docker-compose.yaml  langchain_tutorials.py  pyproject.toml  requirements.txt  setup.py  setup_aiva.sh
ai_virtual_assitant_platform/.github/workflows/: ci.yml
ai_virtual_assitant_platform/alembic/: env.py
ai_virtual_assitant_platform/alembic/versions/: 0001_create_documents_table.py
ai_virtual_assitant_platform/app/: __init__.py  main.py
ai_virtual_assitant_platform/app/api/: __init__.py
ai_virtual_assitant_platform/app/api/routes/: __init__.py  ai.py  auth.py  documents.py  health.py
ai_virtual_assitant_platform/app/core/: __init__.py  celery_app.py  config.py  exception_handlers.py  exceptions.py  logging_config.py  middleware.py  security.py
ai_virtual_assitant_platform/app/db/: __init__.py
ai_virtual_assitant_platform/app/models/: __init__.py  document.py
ai_virtual_assitant_platform/app/schemas/: __init__.py  ai.py  auth.py  base.py  document.py
ai_virtual_assitant_platform/app/services/: __init__.py  ai_service.py  cache_service.py  embedding_service.py  langchain_service.py  metrics_service.py  openai_client.py  prompt_templates.py  rag_service.py  search_service.py  text_chunker.py  token_tracker.py  vector_store.py
ai_virtual_assitant_platform/app/services/extractors/: __init__.py  docx_extractor.py  html_extractor.py  markdown_extractor.py  pdf_extractor.py  txt_extractor.py
ai_virtual_assitant_platform/app/tasks/: __init__.py  document_tasks.py
ai_virtual_assitant_platform/app/utils/: __init__.py  logging.py  logging_examples.py  retry.py
ai_virtual_assitant_platform/docs/: alerting_rules.md  phase3_complete.md  phase4_complete.md  phase5_complete.md  phase6_complete.md  phase7_complete.md  pinterview_prep.md
ai_virtual_assitant_platform/scripts/: activate.sh  demo.sh  setup.sh  setup_env.sh  start-stack.sh
ai_virtual_assitant_platform/tests/integration/: test_api_endpoints.py
ai_virtual_assitant_platform/tests/unit/: test_ai_service.py  test_cache_service.py  test_document_model.py  test_embedding_cache.py  test_exceptions.py  test_health.py  test_langchain_service.py  test_middleware_auth.py  test_middleware_logging.py  test_middleware_ratelimit.py  test_middleware_request_id.py  test_prompt_templates.py  test_rag_cache.py  test_rag_edge_cases.py  test_retry.py  test_search_service.py  test_token_tracker.py  test_vector_store.py
distributed_logging_system/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup_structure.sh  test_app.py
distributed_logging_system/docs/: ARCHITECTURE.md  SETUP.md  TROUBLESHOOTING.md  phase-0-complete.md  phase-1-complete.md  phase-2-complete.md  phase-3-complete.md  phase-4_complete.md  phase-5_complete.md
distributed_logging_system/observability/agents/: log_agent.py  metrics_agent.py
distributed_logging_system/observability/common/: config.py  logger.py  models.py  retry.py
distributed_logging_system/observability/ingestion/: __init__.py  auth.py  kafka_producer.py  main.py  rate_limiter.py  routes.py
distributed_logging_system/observability/processing/: __init__.py  base_consumer.py  log_processor.py  metrics_processor.py
distributed_logging_system/observability/storage/: __init__.py  opensearch_writer.py
distributed_logging_system/scripts/: init_kafka_topics.sh  quick_test_phase2.sh  test_phase2.sh  verify_setup.py
distributed_logging_system/scripts/opensearch/: log_index_template.json
event_ticketing_system/: .gitignore  README.md  TODO.md  alembic.ini  event_list.html  requirements.txt  run.sh  seat_booking.html
flash_sale_system/: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.worker  Makefile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
flash_sale_system/.github/workflows/: ci.yml
flash_sale_system/alembic/: env.py
flash_sale_system/alembic/versions/: 0001_create_orders_table.py
flash_sale_system/api/: circuit_breaker.py  dependencies.py  main.py  rate_limiter.py  redis_ops.py  schemas.py
flash_sale_system/api/middleware/: request_id.py
flash_sale_system/api/routes/: buy.py  health.py  metrics.py
flash_sale_system/docs/: interview_qa.md  phase10_complete.md  phase11_complete.md  phase2_complete.md  phase3_complete.md  phase4_complete.md  phase5_complete.md  phase6_complete.md  phase7_complete.md  phase8_complete.md
flash_sale_system/infrastructure/: docker-compose.redis.yml
flash_sale_system/infrastructure/postgres/: init.sql
flash_sale_system/infrastructure/redis/: decrement_stock.lua  redis.conf
flash_sale_system/infrastructure/scripts/: benchmark_insert.py  preload_stock.py  reconcile_stock.py  test_at_least_once.py  test_burst_traffic.py  test_db_slowdown.py  test_no_oversell.py  test_redis_restart.py  test_restart_recovery.py  test_retry_storm.py  test_worker_crash.py
flash_sale_system/shared/: config.py  logging.py  lua_scripts.py  metrics.py  stream_schema.py
flash_sale_system/tests/: conftest.py  test_buy.py  test_circuit_breaker.py  test_consumer.py  test_dlq.py  test_health.py  test_rate_limiter.py  test_redis_ops.py  test_retry.py  test_stream_schema.py
flash_sale_system/tests/integration/: conftest.py  test_api_integration.py  test_e2e.py  test_lua_script.py  test_worker_db.py
flash_sale_system/tests/load/: locustfile.py
flash_sale_system/worker/: consumer.py  db.py  dlq.py  main.py  retry.py
live_auction_bidding/: .gitignore  FUTURE_PLAN.md  HLD.md  README.md  auction.html  auction_realtime.html  requirements.txt  run.py  run.sh
mini_task_queue/: .gitignore  ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  benchmark.py  benchmark.txt  pytest.ini  requirements.txt  run_api.py  websocket_client.html
real_time_chat/: SCALING.md  docker-compose.yaml  (+1 more)
(+169 files in other folders)
