[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-platform"
version = "0.1.0"
description = "Distributed Logging & Metrics Platform POC"
requires-python = ">=3.9"
dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Async & HTTP
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    
    # Message Queue
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.3.0",
    
    # Storage & Search
    "opensearch-py>=2.4.0",
    "elasticsearch>=8.11.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",  # For S3/MinIO
    
    # Metrics & Monitoring
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    
    # Data Processing
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Utils
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

load-test = [
    "locust>=2.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["observability*"]
exclude = ["tests*", "docs*", "scripts*", "config*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=observability --cov-report=term-missing"
