[tool.poetry]
name = "flash-sale-system"
version = "0.1.0"
description = "High-concurrency flash sale system"
authors = []
packages = [
    { include = "api" },
    { include = "worker" },
    { include = "shared" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
redis = { version = "^5.2.0", extras = ["hiredis"] }
asyncpg = "^0.30.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
prometheus-client = "^0.21.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.0"
pre-commit = "^4.0.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
locust = "^2.32.0"
types-redis = "^4.6.0"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
exclude = ["infrastructure/", "alembic/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "S101", # assert allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S110", "ANN"]
"tests/load/**" = ["S101", "S110", "ANN", "F841"]
"infrastructure/**" = ["S", "ANN", "B", "E501", "N", "F841"]
"alembic/**" = ["ANN", "E402"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "infrastructure.*",
    "alembic.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=api --cov=worker --cov=shared --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
